[#178334998] Bug fix: r-squared superscript doesn't display properly on Safari
- Adding vertical-align for sup seemed to do the trick in Safari with only minor effect in Chrome

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -583,6 +583,10 @@ html, body {
     font-size: 12px;
 }
 
+.dg-equationview p sup {
+    vertical-align: super;
+}
+
 .dg-equationview-opaque {
     opacity: 100%;
 }
